demo-app-with-persistence/05-service-mysql.yaml
#MYSQL
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: demo-wordpress-mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
    tier: mysql
  clusterIP: None
