demo-app-with-persistence/12-route-to-wordpress.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-wordpress
  namespace: demo-wordpress-mysql
spec:
  to:
    kind: Service
    name: wordpress
  port:
    targetPort: 80
  wildcardPolicy: None
